Correct spelling in Åbningstider in CMS config

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -10,7 +10,7 @@ collections:
     delete: false
     files:
       - file: "src/data/aabingstider.md"
-        label: "Åbingstider"
+        label: "Åbningstider"
         name: "aabingstider"
         fields:
           - {
