Retter stavefejl i description

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -141,7 +141,7 @@ collections:
       }
       - {
         label: "Beskrivelse",
-        name: "descrioption",
+        name: "description",
         widget: "text"
       }
       - {
