--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -132,7 +132,11 @@ collections:
               name: "special",
               widget: "list",
               fields:
-                { label: "Overskrift", name: "overskrift", widget: "string" },
+                [
+                  { label: "Overskrift", name: "overskrift", widget: "string" },
+                  { label: "Teaser", name: "teaser", widget: "text" },
+                  { label: "Beskrivelse", name: "body", widget: "markdown" },
+                ],
             }
       - file: "src/pages/klinikken/index.md"
         label: "Klinikken"
