--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -138,6 +138,62 @@ collections:
                   { label: "Beskrivelse", name: "body", widget: "markdown" },
                 ],
             }
+      - file: "src/pages/kiropraktor/index.md"
+        label: "Kiropraktor"
+        name: "kiropraktor"
+        fields:
+          - {
+              label: "Template Key",
+              name: "templateKey",
+              widget: "hidden",
+              default: "kiropraktor-page",
+            }
+          - {
+              label: "Overskrift",
+              name: "overskrift",
+              widget: "string",
+              required: true,
+            }
+          - { label: "Beskrivelse", name: "body", widget: "markdown" }
+          - {
+              label: "Specialer",
+              name: "special",
+              widget: "list",
+              fields:
+                [
+                  { label: "Overskrift", name: "overskrift", widget: "string" },
+                  { label: "Teaser", name: "teaser", widget: "text" },
+                  { label: "Beskrivelse", name: "body", widget: "markdown" },
+                ],
+            }
+      - file: "src/pages/massage/index.md"
+        label: "Massør"
+        name: "massage"
+        fields:
+          - {
+              label: "Template Key",
+              name: "templateKey",
+              widget: "hidden",
+              default: "massage-page",
+            }
+          - {
+              label: "Overskrift",
+              name: "overskrift",
+              widget: "string",
+              required: true,
+            }
+          - { label: "Beskrivelse", name: "body", widget: "markdown" }
+          - {
+              label: "Specialer",
+              name: "special",
+              widget: "list",
+              fields:
+                [
+                  { label: "Overskrift", name: "overskrift", widget: "string" },
+                  { label: "Teaser", name: "teaser", widget: "text" },
+                  { label: "Beskrivelse", name: "body", widget: "markdown" },
+                ],
+            }
       - file: "src/pages/klinikken/index.md"
         label: "Klinikken"
         name: "klinikken"
