--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -138,6 +138,23 @@ collections:
                   { label: "Beskrivelse", name: "body", widget: "markdown" },
                 ],
             }
+      - file: "src/pages/klinikken/index.md"
+        label: "Klinikken"
+        name: "klinikken"
+        fields:
+          - {
+              label: "Template Key",
+              name: "templateKey",
+              widget: "hidden",
+              default: "klinikken-page",
+            }
+          - {
+              label: "Overskrift",
+              name: "overskrift",
+              widget: "string",
+              required: true,
+            }
+          - { label: "Beskrivelse", name: "body", widget: "markdown" }
       - file: "src/pages/kiropraktor/index.md"
         label: "Kiropraktor"
         name: "kiropraktor"
