--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "gatsby": "^2.3.16",
     "gatsby-plugin-layout": "^1.0.14",
     "gatsby-plugin-netlify-cms": "^3.0.18",
+    "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-styled-components": "^3.0.7",
     "gatsby-source-filesystem": "^2.0.29",
     "gatsby-transformer-remark": "^2.3.8",
     "netlify-cms": "^2.9.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.0",
     "remark": "^10.0.1",
     "remark-html": "^9.0.0",
     "remark-preset-lint-recommended": "^3.0.2",
