--- a/package.json
+++ b/package.json
@@ -15,12 +15,17 @@
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.0",
     "gatsby": "^2.3.16",
+    "gatsby-image": "^2.0.41",
     "gatsby-plugin-layout": "^1.0.14",
     "gatsby-plugin-netlify-cms": "^3.0.18",
     "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-sharp": "^2.0.35",
     "gatsby-plugin-styled-components": "^3.0.7",
+    "gatsby-remark-images": "^3.0.11",
+    "gatsby-remark-relative-images": "^0.2.2",
     "gatsby-source-filesystem": "^2.0.29",
     "gatsby-transformer-remark": "^2.3.8",
+    "gatsby-transformer-sharp": "^2.1.18",
     "netlify-cms": "^2.9.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
