--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby": "^2.3.16",
     "gatsby-image": "^2.0.41",
     "gatsby-plugin-layout": "^1.0.14",
+    "gatsby-plugin-netlify": "^2.0.16",
     "gatsby-plugin-netlify-cms": "^3.0.18",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.0.35",
