--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-plugin-styled-components": "^1.10.0",
     "gatsby": "^2.3.16",
     "gatsby-image": "^2.0.41",
+    "gatsby-plugin-google-tagmanager": "^2.0.13",
     "gatsby-plugin-layout": "^1.0.14",
     "gatsby-plugin-netlify": "^2.0.16",
     "gatsby-plugin-netlify-cms": "^3.0.18",
