Upgradere til Helmet 6 beta for at kunne bruge derfer=false

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "netlify-cms": "^2.9.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.0",
+    "react-helmet": "^6.0.0-beta",
     "remark": "^10.0.1",
     "remark-html": "^9.0.0",
     "remark-preset-lint-recommended": "^3.0.2",
