retter indent fejl i CMS config

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -378,4 +378,4 @@ collections:
           widget: "select",
           options: ["Kiropraktor", "Massør", "Fysioterapeut", "Zoneterapeut"],
         }
-      - { label: "Aktiv", name: "enable", widget: "boolean", default: true },
+      - { label: "Aktiv", name: "enable", widget: "boolean", default: true }
