--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -156,7 +156,12 @@ collections:
                   { label: "Overskrift", name: "overskrift", widget: "string" },
                   { label: "Teaser", name: "teaser", widget: "text" },
                   { label: "Beskrivelse", name: "body", widget: "markdown" },
-                  { label: "Aktiv", name: "enable", widget: "boolean", default: true },
+                  {
+                    label: "Aktiv",
+                    name: "enable",
+                    widget: "boolean",
+                    default: true,
+                  },
                 ],
             }
           - {
@@ -205,7 +210,12 @@ collections:
                   { label: "Overskrift", name: "overskrift", widget: "string" },
                   { label: "Teaser", name: "teaser", widget: "text" },
                   { label: "Beskrivelse", name: "body", widget: "markdown" },
-                  { label: "Aktiv", name: "enable", widget: "boolean", default: true },
+                  {
+                    label: "Aktiv",
+                    name: "enable",
+                    widget: "boolean",
+                    default: true,
+                  },
                 ],
             }
           - {
@@ -254,7 +264,12 @@ collections:
                   { label: "Overskrift", name: "overskrift", widget: "string" },
                   { label: "Teaser", name: "teaser", widget: "text" },
                   { label: "Beskrivelse", name: "body", widget: "markdown" },
-                  { label: "Aktiv", name: "enable", widget: "boolean", default: true },
+                  {
+                    label: "Aktiv",
+                    name: "enable",
+                    widget: "boolean",
+                    default: true,
+                  },
                 ],
             }
           - {
@@ -303,7 +318,12 @@ collections:
                   { label: "Overskrift", name: "overskrift", widget: "string" },
                   { label: "Teaser", name: "teaser", widget: "text" },
                   { label: "Beskrivelse", name: "body", widget: "markdown" },
-                  { label: "Aktiv", name: "enable", widget: "boolean", default: true },
+                  {
+                    label: "Aktiv",
+                    name: "enable",
+                    widget: "boolean",
+                    default: true,
+                  },
                 ],
             }
           - {
@@ -343,6 +363,16 @@ collections:
               required: true,
             }
           - { label: "Beskrivelse", name: "body", widget: "markdown" }
+          - {
+              label: "Underemner",
+              name: "subtopic",
+              widget: "list",
+              fields:
+                [
+                  { label: "Titel", name: "title", widget: "string" },
+                  { label: "Indhold", name: "content", widget: "markdown" },
+                ],
+            }
           - {
               label: "SEO",
               name: "SEO",
