Retter fejl i Lørdags array pt. 2

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -66,6 +66,24 @@ collections:
                     format: "DD/MM/YYYY",
                     dateFormat: "DD/MM/YYYY",
                   },
+                  {
+                    label: "Åben",
+                    name: "open",
+                    widget: "datetime",
+                    default: "08:00",
+                    format: "HH:mm",
+                    dateFormat: false,
+                    timeFormat: "H:mm",
+                  },
+                  {
+                    label: "Luk",
+                    name: "close",
+                    widget: "datetime",
+                    format: "HH:mm",
+                    dateFormat: false,
+                    timeFormat: "H:mm",
+                    default: "12:10",
+                  },
                 ],
             }
       - file: "src/pages/index.md"
