--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "gatsby-source-filesystem": "^2.3.3",
     "gatsby-transformer-remark": "^2.8.8",
     "gatsby-transformer-sharp": "^2.5.2",
-    "netlify-cms": "^2.10.48",
+    "netlify-cms-app": "^2.12.12",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
